[gd_scene load_steps=9 format=3 uid="uid://hgjmngvei8v4"]

[ext_resource type="Script" path="res://entities/enemies/goon.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://c3vgb75xkwk4c" path="res://gfx/urkall.png" id="2_27dds"]

[sub_resource type="Animation" id="3"]
resource_name = "hit flash"
length = 0.266667
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4jrui"]
_data = {
"hit flash": SubResource("3")
}

[sub_resource type="SpriteFrames" id="12"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_27dds")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="13"]
size = Vector2(22, 22)

[sub_resource type="RectangleShape2D" id="14"]
size = Vector2(22, 22)

[sub_resource type="RectangleShape2D" id="15"]
size = Vector2(192, 192)

[node name="goon" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("2")
target_offset = Vector2(0, -32)
speed = 20
melee_damage = 1
initial_health = 3

[node name="effects_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4jrui")
}

[node name="sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -6)
sprite_frames = SubResource("12")
offset = Vector2(0, 7)

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
shape = SubResource("13")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
metadata/_edit_group_ = true

[node name="collision_shape_2d" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("14")

[node name="hunt_area" type="Area2D" parent="."]
metadata/_edit_group_ = true

[node name="collision_shape_2d" type="CollisionShape2D" parent="hunt_area"]
shape = SubResource("15")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="hunt_area" to="." method="_on_hunt_area_body_entered"]
[connection signal="body_exited" from="hunt_area" to="." method="_on_hunt_area_body_exited"]
